[gd_scene load_steps=9 format=3 uid="uid://cxln0q5pum4mm"]

[ext_resource type="Script" uid="uid://bnsoimqaxcxyq" path="res://scripts/menus/quests_panel/quests_panel.gd" id="1_qksmf"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="2_8e668"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_ld500"]
[ext_resource type="PackedScene" uid="uid://cw6gj40op07vr" path="res://prefabs/ui/quests/quest_details_panel.tscn" id="5_i3k6r"]
[ext_resource type="Script" uid="uid://cqu8qkicb5n1f" path="res://scripts/menus/scroll_better_follow.gd" id="6_pwv1a"]
[ext_resource type="PackedScene" uid="uid://drk83hqtne0tp" path="res://prefabs/ui/quests/quest_reward_panel.tscn" id="6_qheyf"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="7_8xbdg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_41iyw"]

[node name="QuestsPanelNode" type="Node2D"]
script = ExtResource("1_qksmf")
selectedFilter = -1
metadata/_edit_vertical_guides_ = [640.0]

[node name="QuestsPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_8e668")

[node name="Panel" type="Panel" parent="QuestsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_41iyw")

[node name="QuestsTitle" type="RichTextLabel" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 12.0
offset_right = 204.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_ld500")
bbcode_enabled = true
text = "[center]Turn In Quests[/center]"
fit_content = true

[node name="ActTitle" type="RichTextLabel" parent="QuestsPanel/Panel"]
layout_mode = 1
offset_left = 14.0
offset_top = 8.0
offset_right = 407.0
offset_bottom = 70.0
theme_override_colors/font_outline_color = Color(0.0823529, 0.0862745, 0.294118, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[center]Act 1:
The Radiant War Begins[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="QuestsPanel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -623.0
offset_top = 80.0
offset_right = 624.0
offset_bottom = 120.0
grow_horizontal = 2
alignment = 1

[node name="AllButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "All"

[node name="MainQuestButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
toggle_mode = true
text = "Main Quests"

[node name="InProgressButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
toggle_mode = true
text = "In Progress"

[node name="ReadyToTurnInButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
layout_mode = 2
toggle_mode = true
text = "Ready to Turn In"

[node name="CompletedButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(124, 0)
layout_mode = 2
toggle_mode = true
text = "Completed"

[node name="NotCompletedButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(176, 0)
layout_mode = 2
toggle_mode = true
text = "Not Completed"

[node name="FailedButton" parent="QuestsPanel/Panel/HBoxContainer" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
toggle_mode = true
text = "Failed"

[node name="ScrollContainer" type="ScrollContainer" parent="QuestsPanel/Panel" node_paths=PackedStringArray("boxContainer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 128.0
offset_right = -70.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
script = ExtResource("6_pwv1a")
boxContainer = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestsPanel/Panel/ScrollContainer"]
custom_minimum_size = Vector2(1120, 76)
layout_mode = 2
alignment = 1

[node name="BackButton" parent="QuestsPanel/Panel" instance=ExtResource("7_8xbdg")]
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 25.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="QuestDetailsPanel" parent="." instance=ExtResource("5_i3k6r")]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="QuestRewardPanel" parent="." node_paths=PackedStringArray("itemDetailsPanel") instance=ExtResource("6_qheyf")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1
itemDetailsPanel = NodePath("../QuestDetailsPanel/ItemDetailsPanel")

[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/AllButton" to="." method="_on_all_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/MainQuestButton" to="." method="_on_main_quests_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/InProgressButton" to="." method="_on_in_progress_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/ReadyToTurnInButton" to="." method="_on_ready_to_turn_in_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/CompletedButton" to="." method="_on_completed_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/NotCompletedButton" to="." method="_on_not_completed_button_toggled"]
[connection signal="toggled" from="QuestsPanel/Panel/HBoxContainer/FailedButton" to="." method="_on_failed_button_toggled"]
[connection signal="visibility_changed" from="QuestsPanel/Panel/ScrollContainer" to="QuestsPanel/Panel/ScrollContainer" method="_on_visibility_changed"]
[connection signal="pressed" from="QuestsPanel/Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="panel_hidden" from="QuestDetailsPanel" to="." method="_on_quest_details_panel_panel_hidden"]
[connection signal="ok_pressed" from="QuestRewardPanel" to="." method="_on_quest_reward_panel_ok_pressed"]
